# basics-cpp

./: Dockerfile  README.md
docker-cpp-build/: Dockerfile  docker.sh
docker-sonarqube/: Dockerfile  docker.sh
example-1/: CMakeLists.txt  README.md  build.sh  docker.bat  docker.sh  install.sh
example-1/src/: library.h  main.cpp
example-10/: CMakeLists.txt  README.md  install.sh
example-11/: CMakeLists.txt  README.md  docker.sh
example-11/include/ggolbik/cpp/shared/: IModule.h
example-11/libs/module1/: CMakeLists.txt
example-11/libs/module1/src/: Module1.cpp  Module1.h
example-11/libs/module2/: CMakeLists.txt
example-11/libs/module2/src/: Module2.cpp  Module2.h
example-11/src/: main.cpp
example-11/src/ggolbik/cpp/shared/: SharedLibrary.h
example-2/: CMakeLists.txt  README.md  build.bat  build.sh  docker.sh  test.sh
example-2/src/: library.cpp
example-2/test/: CMakeLists.txt  main.cpp
example-3/: CMakeLists.txt  README.md  build.bat  docker.sh  libs.sh  test.sh
example-3/libs/: .gitignore
example-3/src/: CMakeLists.txt  library.cpp  library.h
example-3/test/: CMakeLists.txt  main.cpp
example-4/: README.md  build.sh
example-4/src/: library.h
example-5/: README.md  build.sh  docker.bat  sonar-project.properties  sonarqube.sh
example-5/src/: main.cpp
example-6/: CMakeLists.txt  README.md  docker.sh
example-6/src/: CMakeLists.txt  Client.h  ClientLinux.cpp  ClientWin.cpp  Server.h  ServerLinux.cpp  ServerWin.cpp  Worker.h  WorkerLinux.cpp  WorkerWin.cpp  main.cpp
example-7/: README.md  build.bat  build.sh  docker.sh
example-7/cmake/: linux-amd64.cmake  linux-arm64.cmake  linux-armel.cmake  linux-armhf.cmake  windows-x86.cmake  windows-x86_64.cmake
example-7/scripts/: build-linux-amd64.sh  build-linux-arm64.sh  build-linux-armel.sh  build-linux-armhf.sh  build-windows-x86.sh  build-windows-x86_64.sh
example-8/: .gitignore  CMakeLists.txt  README.md  docker.sh  libs.sh
example-8/cmake/: linux-amd64.cmake  linux-arm64.cmake  linux-armel.cmake  linux-armhf.cmake  windows-x86.cmake  windows-x86_64.cmake
example-8/libs/: openssl-linux-amd64.sh  openssl-linux-arm64.sh  openssl-linux-armel.sh  openssl-linux-armhf.sh  openssl-windows-x86.sh  openssl-windows-x86_64.sh
example-8/scripts/: build-linux-amd64.sh  build-linux-arm64.sh  build-linux-armel.sh  build-linux-armhf.sh  build-windows-x86.sh  build-windows-x86_64.sh
example-8/src/: Algorithm.cpp  Algorithm.h  Client.h  ClientLinux.cpp  ClientWin.cpp  OpenSslWrapper.cpp  OpenSslWrapper.h  Server.h  ServerLinux.cpp  ServerWin.cpp  Worker.h  WorkerLinux.cpp  WorkerWin.cpp  main.cpp
example-9/: CMakeLists.txt  README.md
example-9/src/: library.cpp
